    have child-classes that need to do something before actually starting the 
    thread process.   		
 -  Adding back support for MySQL.  We havent used MySQL for quite some time, 
 	and had been using SQLite3 instead.  But because we are doing a project 
 	with MySQL we need to bring that code back into line with the rest of the 
 	system that has changed somewhat.

200 	0.2.00		October 10, 2006.
 -  Seperating objects into seperate files that get included, and compiled 
 	as an object that is imported into the project at link time.  Linux 
 	centric, have not made an attempt to make it work for windows, but that 
 	will come whenever I have to write something for the windows environment.
 	
 	  ** No compatibility with previous versions is maintained, although the 
 	  ** objects themselves wont have changed much.

147		0.1.47		September 7, 2006.
 -  Removed test printf statement from DpHttpServer that happens whenever 
 	a new connection is received.

143		0.1.43		August 12, 2006
 -  DpHttpClient::GetURL() function was not implemented.  

142		0.1.42		August 11, 2006
 -  Modified DpHttpClient so that parameters are added explicitly to the 
 	request so that the actual parameter can be processed for special 
 	characters.  Can still request a URL, but it will assume that it has 
 	already been processed for special characters and will fail immediately 
 	if any invalid ones are detected.  This breaks compatibility with 
 	previous versions. 
 -  DpServerInterface modified so that it is derived from DpThreadObject 
	rather than DpSocket.  This is because it actually is not really about a 
	socket, it is more to do with thread (object) management.  Externally the 
	functionality will not be changed.  It is noted that the DpServerInterface 
	was originally decoupled from DpThreadObject and derived from DpSocket 
	BECAUSE we wanted to provide a system where it can provide a server without 
	threads.  However, by moving the listen functionality to the DpSocket we 